# GestaltOS

./: .gitignore  CMakeLists.txt  readme.md
docs/: general.md
src/: game.cpp  game.hpp  main.cpp  test.cpp  test.hpp
src/core/: core.cpp  core.hpp  updatable.cpp  updatable.hpp
